# NanosSharp

./: .gitmodules  README.md
api/: .gitignore  NanosSharp.sln
api/NanosSharp/: LuaVM.cs  NanosSharp.csproj  Natives.cs  Runtime.cs
api/NanosSharp.API/: ILuaUnit.cs  ILuaVM.cs  IModule.cs  LuaComparator.cs  LuaExtensions.cs  LuaOperator.cs  LuaRef.cs  LuaType.cs  NanosSharp.API.csproj
api/NanosSharp.Client/: BridgeServer.cs  NanosSharp.Client.csproj  Natives.cs  PackageLoader.cs  Runtime.cs  RuntimeConfig.cs
api/NanosSharp.Client.API/: INatives.cs  Package.cs
api/NanosSharp.Client.Lua/: Package.toml
api/NanosSharp.Client.Lua/Client/: Index.lua
api/NanosSharp.Server/: Logger.cs  NanosAsync.cs  NanosSharp.Server.csproj  NanosSharp.Server.csproj.DotSettings  Package.cs  RuntimeConfig.cs  ServerModule.cs
api/NanosSharp.Server.Bindings/: Enums.g.cs  NanosSharp.Server.Bindings.csproj
api/NanosSharp.Server.Bindings.Generator/: BindingsGenerator.cs  NanosSharp.Server.Bindings.Generator.csproj  Program.cs  TypeTransformer.cs
api/NanosSharp.Server.Bindings.Generator/Model/: AuthorityOwned.cs  Class.cs  Document.cs  Enum.cs  EnumData.cs  EnumValue.cs  Event.cs  File.cs  Function.cs  Operator.cs  TableProp.cs  TransformedValue.cs  (+1 more)
api/NanosSharp.TestModule/: Main.cs  NanosSharp.TestModule.csproj
api/NanosSharpServerTest/: Main.cs  NanosSharpServerTest.csproj  Package.cs.toml
client_bootstrap/: .gitignore  dllmain.cpp  version.rc  version.sln  version.vcxproj
runtime/: .gitignore  CMakeLists.txt
runtime/src/: icvalues.h  main.cpp  natives.h  runtime.h
(+126 files in other folders)
